--- a/bootstrap.0.2.2.html
+++ b/bootstrap.0.2.2.html
@@ -7,6 +7,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://use.fontawesome.com/7c21822d4d.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <style media="screen">
             *{
                 -webkit-animation-delay:0.5s; /* Safari 和 Chrome */
@@ -98,7 +99,6 @@
                 }
             }
         </style>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body>
         <div class="bar">
@@ -133,13 +133,16 @@
             } else {$('.biglogo').attr('src', 'img/myPhoto2.png')}
         })
     }
-    var bondWaterzoom = function () {
+    var bondBiglogo = function () {
         $('.biglogo-container').hover(function () {
             $('.water').addClass('water-hover')
             $('.liusj').addClass('liusj-hover')
         }, function () {
             $('.water').removeClass('water-hover')
             $('.liusj').removeClass('liusj-hover')
+        })
+        $('.biglogo-container').on('click', function () {
+            window.location.href='resume.html'
         })
     }
     var bondMenu = function () {
@@ -149,7 +152,7 @@
     }
     var __main = function () {
         bondLogo()
-        bondWaterzoom()
+        bondBiglogo()
         bondMenu()
     }
     __main()
