--- a/bootstrap.0.2.2.html
+++ b/bootstrap.0.2.2.html
@@ -69,10 +69,7 @@
                 opacity: 0.4;
             }
 
-            b{
-                color: darkblue;
-                font-size: 1.1em;
-            }
+            b{color: darkblue;}
             .float-left{float: left;}
             .float-right{float: right;}
             h4{
@@ -119,10 +116,10 @@
         </div>
 
         <div class="welcome">
-            <h5><i class="fa fa-arrow-up"></i> Click above for my <b>Resume</b>. 单击上图,查看简历<i class="fa fa-arrow-up"></i></h5>
+            <h5><i class="fa fa-arrow-up"></i> Click for <b>Resume</b>. 单击上图,查看简历<i class="fa fa-arrow-up"></i></h5>
             <h4>Welcome to Liu's website. <br>Hope you could enjoy it. <br>BTW, he is a <b> Front-End Engineer </b>.</h4>
             <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <h4>哈喽，欢迎来到<b> 刘少杰 </b>的小站，<br>希望你能喜欢。<br>顺便说一句，他是个<b>前端</b>，不谢。</h4>
+            <h4>欢迎来到<b> 刘少杰 </b>的小站，<br>希望你能喜欢。<br>顺便说一句，他是个<b>前端</b>，不谢。</h4>
         </div>
 <script type="text/javascript">
 //切换头像
