--- a/resume.html
+++ b/resume.html
@@ -10,16 +10,28 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <style media="screen">
             /**{outline: thin dotted red;}*/
-            body{text-align: center;}
+            body{text-align: center; min-width: 320px;}
             b{color: black; font-weight: bolder;}
             st{color: royalblue; font-weight: bolder;}
-            .btn-primary{height: 1.8em; padding: 2px; z-index: 100; position: relative; bottom: 12px;}
+            canvas{display: none;}
+            .btn-primary{
+                height: 1.8em;
+                padding: 2px;
+                z-index: 100;
+                position: relative;
+                bottom: 1px;
+                box-shadow: 2px 2px 2px black;
+            }
             .topbar{
                 text-align:justify;
                 text-align-last:justify;
                 background-color: rgba(0, 0, 0, 0.90);
                 color: white;
                 border-bottom: thick solid white;
+            }
+            .topbtn:hover{
+                opacity: 0.8;
+                cursor: pointer;
             }
             .topbar img{height: 2em;}
             .topbar span{
@@ -30,6 +42,7 @@
                 background-color: rgba(0, 0, 0, 0.80);
                 padding: 1em 3em 1.5em 3em;
             }
+            .method-txt a{text-decoration: underline;}
             .name{
                 text-align: center;
                 padding: 0;
@@ -43,7 +56,7 @@
             .method{text-align: left;}
             a{color: inherit;}
             a:hover{color: lightblue;}
-            .leftpart{
+            .leftpart, .rightpart{
                 text-align: left;
                 padding: 0;
             }
@@ -60,6 +73,7 @@
                 border-radius: 0.3em;
                 padding-left: 3em;
                 left: 2em;
+                /*box-shadow: 2px 2px 2px gray;*/
             }
             .title1-txt-c{font-size: 1em;}
             .title1-txt-e{
@@ -83,9 +97,9 @@
             }
             .title2-txt{
                 display: inline-block;
-                /*position: relative;*/
+                position: relative;
                 width: 85%;
-                left: -1.7em;
+                left: 0em;
                 z-index: -10;
                 border-bottom: medium solid black;
                 padding-left: 2em;
@@ -98,8 +112,14 @@
             .title3{
                 padding-left: 2.5em;
             }
-            @media (min-width: 650px) {
+            @media (min-width: 685px) {
                 .name{float: right;}
+                .leftpart, .rightpart{width: 50%; height: 100%;}
+                .leftpart{float: left;
+                    /*border-right: thick double black;*/
+                }
+                .rightpart{float: right; border-left: thick double black;}
+                /*.title1-txt, .title2-txt, .title1, .title2, .title3{width: 90%}*/
             }
             @media (max-width: 370px) {
                 .topbtn370{display: none !important;}
@@ -109,10 +129,10 @@
     <body>
         <div class="topbar">
             <span></span>
-            <img src="LOGO.png" alt="" /> <span class="line">|</span>
-            <span>源 代 码</span> <span class="line">|</span>
-            <span>打印PDF</span> <span class="line topbtn370">|</span>
-            <span class="topbtn370">个人主页</span> <span></span>
+            <img  class="topbtn" src="LOGO.png" alt="" /> <span class="line">|</span>
+            <span class="topbtn">源 代 码</span> <span class="line">|</span>
+            <span class="topbtn btnPrint">打印PDF</span> <span class="line topbtn370">|</span>
+            <span class="topbtn topbtn370">个人主页</span> <span></span>
         </div>
         <div class="contact">
             <div class="name">
@@ -175,6 +195,8 @@
 
             </div>
         </div>
+<script src="js/html2canvas.js">
+</script>
 <script type="text/javascript">
     var addT1 = function (where, icon, txtC, txtE) {
         var temperate = `
@@ -215,62 +237,106 @@
         $(`.${where}`).append(temperate)
     }
     var init = function () {
-        addT1('leftpart', 'book', '教 育 经 历', 'Education')
-        addT2('leftpart', 'graduation-cap', '2014~2017 硕士:华南师大(推免保送)')
-        addT3('leftpart', ['trophy','trophy','trophy','trophy'], [
+        var where = 'leftpart'
+        addT1(where, 'book', '教 育 经 历', 'Education')
+        addT2(where, 'graduation-cap', '2014~2017 硕士:华南师大(推免保送)')
+        addT3(where, ['trophy','trophy','trophy','trophy'], [
             '2016年 3月~12月 <b>访问学者</b> - 美国UCO大学',
             '2014年~2016年 连续三年 "<b>一等奖学金</b>"',
             '2016年 3月 美国数学建模 "二等奖"',
             '2015年 11月 校级学术演讲比赛 "第一名"'
         ])
-        addT2('leftpart', 'graduation-cap', '2010~2014 本科:华南师大(国家 211)')
-        addT3('leftpart', ['trophy','trophy'], [
+        addT2(where, 'graduation-cap', '2010~2014 本科:华南师大(国家 211)')
+        addT3(where, ['trophy','trophy'], [
             '2012年 全国物理实验竞赛 "二等奖"',
             '2012年 广东物理设计大赛 "二等奖"'
         ])
 
-        addT1('leftpart', 'language', '语 言 水 平', 'Language')
-        addT2('leftpart', 'star', '英  语')
-        addT3('leftpart', ['check','check','check'], [
-            '通过 CET-4, <b>CET-6</b>',
+        addT1(where, 'language', '语 言 水 平', 'Language')
+        addT2(where, 'star', '英  语')
+        addT3(where, ['check','check','check'], [
+            '通过 CET-4, <st>CET-6</st>',
             '查阅英文技术文档, 开发者大会视频',
-            '在美国生活一年, <b>邮件/口语</b> 交流无障碍'
+            '在<st>美国</st>生活一年, <b>邮件/口语</b> 交流无障碍'
         ])
-        addT2('leftpart', 'star', '中  文')
-        addT3('leftpart', ['check'], ['粤语 / 普通话 / 潮州话'])
-
-        addT1('leftpart', 'rocket', '项 目 经 验', 'Experience')
-        addT2('leftpart', 'cubes', `简历生成器`, 'resume.html')
-            addT3('leftpart', ['star','gear','gear'], [
-                '快速灵活地生成预定样式的简历(本页面)',
+        addT2(where, 'star', '中  文')
+        addT3(where, ['check'], ['粤语 / 普通话 / 潮州话'])
+        where = 'rightpart'
+        addT1(where, 'rocket', '前 端 经 验', 'Experience')
+        addT2(where, 'newspaper-o', `简历生成器`, 'resume.html')
+            addT3(where, ['star','gear','gear','gears'], [
+                '<st>自建框架</st>,生成预定样式的简历(本页面)',
                 '语义化的 HTML 模块化的 CSS 实现<st>响应式布局</st>',
                 '编写<st>JavaScript模块</st>生成html',
+                '采用<st>canvas画布绘制</st>,实现完美打印',
             ])
-        addT2('leftpart', 'cubes', `数字拼图 游戏`, 'resume.html')
-            addT3('leftpart', ['star','gear','gear'], [
+        addT2(where, 'calculator', `数字拼图 游戏`, 'resume.html')
+            addT3(where, ['star','gear','gear'], [
                 '基于<st>HTML5</st> 的单页面游戏应用',
                 '<b>完美兼容</b> 桌面端和移动端',
                 '尝试不使用<st>jQuery</st>纯粹使用<st>原生JS</st>开发'
             ])
-        addT2('leftpart', 'cubes', `ToDo 应用`, 'resume.html')
-            addT3('leftpart', ['gear','gear','gear'], [
+        addT2(where, 'calendar-check-o', `ToDo 应用`, 'resume.html')
+            addT3(where, ['gear','gear','gear'], [
                 '使用<st> HTML5的localStorage </st>新特性实现本地数据存储',
                 '利用<st> Ajax和JSON </st>实现前后端协同数据交互',
                 '基于<b> 事件链监听 </b>实现用户界面插件化交互'
             ])
-        addT2('leftpart', 'cubes', `首页轮播图`, 'resume.html')
-            addT3('leftpart', ['gear','gear','gear'], [
+        addT2(where, 'photo', `天猫轮播图`, 'resume.html')
+            addT3(where, ['gear','gear','gear'], [
                 '利用<st> jQuery 面向对象 </st>开发轮播图组件',
                 '基于<st> CSS3 </st>的新特性实现设计意图'
             ])
-        addT2('leftpart', 'cubes', `用户注册页面`, 'resume.html')
-        addT2('leftpart', 'cubes', `微博评论页面`, 'resume.html')
-        addT2('leftpart', 'cubes', `个人小站搭建`, 'resume.html')
+        addT2(where, 'sign-in', `用户注册页面`, 'resume.html')
+            addT3(where, ['star','gear','gear'], [
+                '对用户输入内容的<st>实时监听/反馈</st>',
+                '使用 jQuery 创建基础 逻辑校验和 <st>Ajax表单提交</st>',
+            ])
+        addT2(where, 'weibo', `微博评论页面`, 'resume.html')
+            addT3(where, ['gear','gear','gear'], [
+                '利用<st>Ajax</st>和<st>localStorage</st>实现与服务器和本地的数据通信',
+                '基于<st>JavaScript</st>的逻辑校验和表单提交',
+            ])
+        addT2(where, 'home', `个人小站搭建`, 'resume.html')
+            addT3(where, ['gear','gear','gear','gears'], [
+                '采用<st>腾讯云服务器</st>和<st>Apache</st>搭建个人小站',
+                '基于<st>FTP协议</st>的站点维护',
+                '不使用WordPress等简易框架,完全自行搭建'
+            ])
+
     }
+    var initPrint = function () {
+        var giveImg = function() {
+            var state = document.readyState
+                console.log('newImg')
+                if (state == 'complete') {
+                html2canvas(document.body, {
+                onrendered: function(canvas) {
+                $('.content').append(canvas);//生成画布后如何处理，当然可以在新标签打开，在浮层展示等等
+                },canvas_id: 'canvas1'});//通过修改html2canvas源码添加canvas的id
+            }
+        }
+        var windowPrint = function () {
+            var image = document.querySelector('.content canvas')
+            // console.log(image)
+            var mysrc =  image.toDataURL('image/png')
+            printWindow = window.open()
+            printWindow.document.write(`<img src=${mysrc}>`)
+            printWindow.print()
+        }
+        $('.btnPrint').on('click', function() {
+            giveImg()
+            setTimeout(windowPrint, 2000);
+        })
+    }
+
     var __main = function () {
         init()
+        initPrint()
     }
     __main()
+
+
 </script>
     </body>
 </html>
